tests/paczka1/small_fuzzy/57889380.err
Error in line 4: 0zOc A238 89,9
Error in line 7: 0zOc A96 18,6
Error in line 15: AslMcrA S470 15,8
